--- a/TODO
+++ b/TODO
@@ -1,4 +1,1 @@
-* Test binded animations
-	- Animation constructor should not contain "*ref = start" in case of queued animations -> reset()
-* Implement textures
-* Implement texts in dialog boxes
+* Textures...
